carousel caption alignment issue solved

--- a/Portfolio/less/home.less
+++ b/Portfolio/less/home.less
@@ -64,7 +64,7 @@
     .carousel-caption {
         right: 0%;
         padding-bottom: 30px;
-        bottom: 20%;
+        bottom: 30%;
         background: #fff;
         width: 40%;
         left: initial;
