--- a/Portfolio/less/homepage-2.less
+++ b/Portfolio/less/homepage-2.less
@@ -826,6 +826,21 @@ figure.snip0019:hover figcaption::before {
     opacity: 1;
     transform: translate3d(0%, 0%, 0); 
   }
+  figure.snip0019 figcaption > div
+  {
+    height: 50%;
+    width: 100%;
+
+    p
+    {
+      background: none;
+      color: @white;
+    }
+  }
+  figure.snip0019:hover figcaption::before
+  {
+    opacity: 0;
+  }
 }
 @media screen and (max-width:568px)
 {
